# plasma-dialer

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/qml/Call/: CallPage.qml
